<resources>
    <string name="app_name">ReciclaYa</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="OlvidoContrasena">¿Olvidaste tu contraseña?</string>
    <string name="Unete">Únete a la red verde</string>
    <string name="TerminosDeServicio">TÉRMINOS DE SERVICIO DE USO DE LA APLICACIÓN MÓVIL RECICLAYA</string>
    <string name="PoliticaDePrivacidad">POLÍTICA DE PRIVACIDAD DE RECICLAYA</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="MiPerfil">Mi Perfil</string>
    <string name="HistorialSolicitudes">Historial de Solicitudes</string>
    <string name="CrearSolicitud">Crear Solicitud</string>
    <string name="HistorialEncargos">Historial de Encargos</string>
    <string name="SolicitudesDisponibles">Solicitudes Disponibles</string>
    <string name="Rating">Rating</string>
    <string name="InfoPersonal">INFORMACIÓN PERSONAL</string>
    <string name="RestablecerContrasena">Restablecer Contraseña</string>
    <string name="VerificarCodigo">Verificar Codigo</string>
    <string name="SeguridadDeLaCuenta">SEGURIDAD DE LA CUENTA</string>
    <string name="CualRol">¿CUÁL SERÁ TU ROL?</string>
    <string name="CambiarContrasena">Cambiar contraseña</string>
    <string name="MiActividad">MI ACTIVIDAD</string>
    <string name="CercaDeTi">Cerca de ti</string>
    <string name="TipoDeResiduo">Tipo de Residuo</string>
    <string name="DetallesDeCarga">Detalles de carga</string>
    <string name="MensajeBienvenida">Únete a la red de reciclaje local. \nConectamos personas con recicladores\npara un planeta más verde.</string>
    <string name="MensajeTyC">Tus datos serán procesados según nuestra política de sostenibilidad.</string>
    <string name="MensajeUnete">Completa tus datos para empezar a transformar residuos en recursos.</string>
    <string name="MensajeVerificarCodigo">Ingrese el código de seguridad que le \nllegó a su correo electrónico.</string>
    <string name="MensajeOlvido">Ingrese su correo electrónico y se le \nenviará un código de verificación. Siga \nlas instrucciones que llegue en su correo \ncon el que se ha registrado.</string>
    <string name="MensajeCambiarContrasena">Digite su cambio de contraseña en los \napartados.</string>
    <string name="MensajeNoHayResultados">Vaya… Parece que no tienes solicitudes\nactualmente. Intente más tarde o amplie\nla búsqueda de filtros.</string>
    <string name="MensajePersona">Deseo publicar solicitudes de recolección para mis residuos.</string>
    <string name="MensajeReciclador">Busco recolectar materiales y contribuir a la economía circular.</string>
    <string name="Reciclador">Reciclador</string>
    <string name="Usuario">Usuario</string>
    <string name="Obligatorio">Obligatorio</string>
    <string name="Plastico">Plástico</string>
    <string name="Tamano">Extragrande</string>
    <string name="CeroSolicitudes">0 Solicitudes</string>
    <string name="CorreoElectronico">Correo electrónico</string>
    <string name="CorreoEjemplo">nombre@ejemplo.com</string>
    <string name="Contrasena">Contraseña</string>
    <string name="ConfirmarContra">Confirmar Contraseña</string>
    <string name="VuelvaAEscribirContrasena">Vuelva a escribir su contraseña</string>
    <string name="ContrasenaEjemplo">••••••••</string>
    <string name="NombreCompleto">Nombre completo</string>
    <string name="NombrePendiente">Pendiente…</string>
    <string name="CantidadEstimada">Cantidad estimada</string>
    <string name="Dia">Día</string>
    <string name="DiaEjemplo">23/04/2026</string>
    <string name="Hora">Hora</string>
    <string name="HoraEjemplo">20:38</string>
    <string name="DireccionCompleta">Dirección completa</string>
    <string name="DireccionEjemplo">Calle 123 #45-67, Ciudad</string>
    <string name="PersonaRecicla">Persona que recicla</string>
    <string name="RecicladorLocal">Reciclador Local</string>
    <string name="AunNoCuenta">¿Aún no tienes una cuenta?</string>
    <string name="RegistrateAqui">Regístrate aquí</string>
    <string name="TyC">Acepto los Términos de Servicio y la Política de Privacidad.</string>
    <string name="SiYaTienesCuenta">Si ya tienes cuenta</string>
    <string name="YaTienesUnaCuenta">¿Ya tienes una cuenta? </string>
    <string name="Iniciarssesion">Iniciar sesión</string>
    <string name="VolverAEnviarCodigo">Volver a enviar código</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Continuar">Continuar</string>
    <string name="EnviarCodigo">Enviar Código</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="PublicarSolicitud">Publicar Solicitud</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Editar">Editar</string>
    <string name="ActualizarSolicitud">Actualizar Solicitud</string>
    <string name="Reset">Reset</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Aplicar">Aplicar</string>
    <string name="LimpiarCampos">Limpiar campos</string>
    <string name="Mapa">Mapa</string>
    <string name="Perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>