<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".antiguo.general.fragments.register.FRSeleccion">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Unete"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/gotham_bold"

        android:layout_marginTop="20dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/MensajeUnete"
        android:textColor="@color/gris"
        android:textSize="14sp"
        android:fontFamily="@font/gothamnarrow_medium"

        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/gothamnarrow_medium"
        android:text="@string/CualRol"
        android:textColor="@color/gris"
        android:textSize="13sp"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVRolFRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
    />

    <Button
        android:id="@+id/BtnConfirmarFRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/Confirmar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"

        android:background="@drawable/green_button_background"

        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/RVRolFRS"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>