<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.view.register.fragments.FragmentRegisterSeleccion">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <ImageView
            android:id="@+id/IVRegresarFRS"
            android:layout_width="15dp"
            android:layout_height="15dp"

            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:background="@drawable/flechaizquierda" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fontFamily="@font/gothamnarrow_medium"

            android:gravity="center"
            android:text="@string/CrearCuenta"
            android:textColor="@color/black"
            android:textSize="19sp" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0.05dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="0.9"
        android:paddingHorizontal="30dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/Unete"
            android:textColor="@color/black"

            android:textSize="25sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:fontFamily="@font/gothamnarrow_medium"
            android:text="@string/MensajeUnete"
            android:textColor="@color/gris"

            android:textSize="14sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:fontFamily="@font/gothamnarrow_medium"
            android:text="@string/CualRol"
            android:textColor="@color/gris"

            android:textSize="13sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVRolFRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/BtnConfirmarFRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:background="@drawable/green_button_background"
            android:text="@string/Confirmar"
            android:textAllCaps="false"

            android:textColor="@color/white"

            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RVRolFRS" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>